force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/Apttus_Proposal__Proposal_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Represents a product or service line item associated with a quote/proposal</description>
    <label>Proposal Line Item</label>
    <nameField>
        <displayFormat>QL-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>