force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APTS_Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>APTS_Discount_Reason__c</fullName>
    <description>Copy of the field on the Line Item in order to show up on the Proposal line Item as a separate line.</description>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DI</fullName>
                <label>Discount</label>
            </value>
            <value>
                <fullName>DIDIS1</fullName>
                <label>Discount 1st Distribution</label>
            </value>
            <value>
                <fullName>DICORP</fullName>
                <label>Discount Corporation</label>
            </value>
            <value>
                <fullName>DIF</fullName>
                <label>Discount Flight</label>
            </value>
            <value>
                <fullName>DIFF</fullName>
                <label>Discount Free Flight</label>
            </value>
            <value>
                <fullName>DIVIP</fullName>
                <label>Discount VIP Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>