force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APTS_Language__c.field-meta.xml
<CustomField>
    <fullName>APTS_Language__c</fullName>
    <description>This field is used for Translation purpose where we can get translation for proposal line itms(Products)</description>
    <formula>TEXT(Apttus_Proposal__Proposal__r.Apttus_Proposal__Account__r.Language__c)</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>