force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APTS_Market__c.field-meta.xml
<CustomField>
    <fullName>APTS_Market__c</fullName>
    <description>This field will be  used to fetch Locale and language of Account in Proposal Line item for translation purpose</description>
    <formula>TEXT(Apttus_Proposal__Proposal__r.Apttus_Proposal__Account__r.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>