force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APTS_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>APTS_Product_Code__c</fullName>
    <formula>if(Apttus_QPConfig__OptionId__c != null, Apttus_QPConfig__OptionId__r.ProductCode ,
Apttus_Proposal__Product__r.ProductCode
)</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>