force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Course_Description_Heading__c.field-meta.xml
<CustomField>
    <fullName>Course_Description_Heading__c</fullName>
    <formula>Apttus_Proposal__Proposal__r.Course_Description_Heading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Description Heading</label>
    <type>Text</type>
</CustomField>