force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF( TEXT(Apttus_QPConfig__AdjustmentType__c) = "% Discount" ,  TEXT(Apttus_QPConfig__AdjustmentAmount__c)&amp; "%" , IF(TEXT(Apttus_QPConfig__AdjustmentType__c) = "Discount Amount","-" &amp; TEXT(Apttus_QPConfig__AdjustmentAmount__c),""))</formula>
    <label>Discount</label>
    <type>Text</type>
</CustomField>