force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Formatted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_End_Date__c</fullName>
    <description>Retrieved from the line item</description>
    <label>Formatted End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>