force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Formatted_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Start_Date__c</fullName>
    <description>Retrieved from Line item</description>
    <label>Formatted Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>