force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/LessonsDescriptionsTranslation__c.field-meta.xml
<CustomField>
    <fullName>LessonsDescriptionsTranslation__c</fullName>
    <description>This is the same field in Translation Object</description>
    <label>Lessons Descriptions Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>