force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/LTCourseNumber__c.field-meta.xml
<CustomField>
    <fullName>LTCourseNumber__c</fullName>
    <description>Used to display LT Course Number on Quote Preview Page</description>
    <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APTS_LTCourseNumber__c</formula>
    <label>LT Course Number</label>
    <type>Text</type>
</CustomField>