force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/LTDestinationCode__c.field-meta.xml
<CustomField>
    <fullName>LTDestinationCode__c</fullName>
    <description>Used for LT Bundle</description>
    <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APTS_DestinationCode__c</formula>
    <label>LTDestinationCode</label>
    <type>Text</type>
</CustomField>