force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Net_Price_2_decimals__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_2_decimals__c</fullName>
    <formula>Apttus_QPConfig__NetPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price (2 decimals)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>