force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Non_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discounted_Price__c</fullName>
    <label>Non Discounted Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>