force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/ProductNameTranslation__c.field-meta.xml
<CustomField>
    <fullName>ProductNameTranslation__c</fullName>
    <description>This is the same field in Translation Object</description>
    <label>Product Name Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>