force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Proposal_Adj_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Adj_Line_Item_Count__c</fullName>
    <label>Proposal Adj Line Item Count</label>
    <summaryForeignKey>Apttus_QPConfig__ProposalAdjustmentLineItem__c.Apttus_QPConfig__LineItemId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>