force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Quantity_Integer__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Integer__c</fullName>
    <formula>Apttus_QPConfig__Quantity2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>