force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Sequence_in_Template__c.field-meta.xml
<CustomField>
    <fullName>Sequence_in_Template__c</fullName>
    <label>Sequence in Template</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>