force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Total_Heading__c.field-meta.xml
<CustomField>
    <fullName>Total_Heading__c</fullName>
    <formula>Apttus_Proposal__Proposal__r.Total_Heading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Heading</label>
    <type>Text</type>
</CustomField>